--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -1,12 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+<%- include('../template/header.ejs') %>
 
     <% console.log(locals.articles) %>
     
@@ -22,6 +14,7 @@
     <% if(locals.nom) { %>
         <%= nom %>
     <% } %>
-            
+
+    <%- include('../template/footer.ejs') %>
 </body>
 </html>
