--- a/views/pages/taches.ejs
+++ b/views/pages/taches.ejs
@@ -1,5 +1,7 @@
 <h1>Todo List</h1>
 
-<label for="tachecreate">Tâches</label>
-<input type="text" name="tachecreate" id="tachecreate">
-<button href="/"></button>
+<form action="" method="post">
+    <label for="tachecreate">Tâches</label>
+    <input type="text" name="tachecreate" id="tachecreate">
+    <input type="submit">Ajouter</button>
+</form>
